# modality_collapse_paper

./: .gitignore  README.md  pyproject.toml
configs/: experiment1.yaml
scripts/: 01_extract_representations.py  02_extract_text_baseline.py  03_run_probes.py  04_estimate_lipschitz.py  05_estimate_wasserstein.py  06_per_type_analysis.py  07_mode_alignment.py  08_generate_tables.py  10_extract_vision_labels.py  11_gradient_projection.py  12_causal_ablation.py  13_ms_swap.py  14_train_speaker_lora.py  download_data.sh  run_full_pipeline.sh  run_prismatic_pipeline.sh  verify_results.py
src/modality_collapse/extraction/: hooks.py  pooling.py  storage.py
src/modality_collapse/models/: __init__.py  llava.py  prismatic.py  qwen2audio.py  registry.py  text_baseline.py  ultravox.py
src/modality_collapse/utils/: config.py  device.py  env.py
tests/: expected_values.json
