[project]
name = "modality-collapse"
version = "0.1.0"
description = "Experimental validation of modality collapse in multimodal LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.52.0,<5",
    "accelerate>=0.27.0",
    "datasets>=2.17.0,<4",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "POT>=0.9.3",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "h5py",
    "omegaconf",
    "tqdm",
    "wandb",
    "peft>=0.18.1",
    "sentencepiece>=0.2.1",
    "protobuf>=6.33.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modality_collapse"]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu121"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
